fixed mobile scaling layout issues for landing and intro text

--- a/src/app/styles/page.module.scss
+++ b/src/app/styles/page.module.scss
@@ -166,6 +166,11 @@
 .lines {
     display: flex;
     flex-wrap: wrap;
+    width: fit-content;
+}
+.linesSection {
+    display: flex;
+    flex-wrap: wrap;
 }
 .sharedLines {
     display: flex;
@@ -174,6 +179,7 @@
 .linesContainer {
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 
 .bottomPointer {
@@ -191,27 +197,32 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    left: 50%;
-    width: fit-content;
+    width: 100%;
     align-items: center;
-    bottom: -2rem;
-
-    transform: translateX(-50%) translateY(calc(50vh));
+    top: 15rem;
+    padding-top: 15rem;
 }
 
 .title {
     position: relative;
+    width: 100%;
     height: fit-content;
     color: $col-white;
     text-align: center;
+    & > div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
     .summaryContainer {
         display: flex;
-        width: 100%;
         flex-direction: column;
         gap: 1rem;
         padding-top: 3rem;
         padding-bottom: 3rem;
-        width: clamp(360px, calc(300px + 25vw), 800px);
+        max-width: 800px;
+        padding-left: 1rem;
+        padding-right: 1rem;
     }
 }
 .glow {
